--- a/src/less/mixins/carousel.less
+++ b/src/less/mixins/carousel.less
@@ -7,38 +7,43 @@
   .jcarousel-item {
     height: @height;
   }
-}
 
-/** Carousel Pagination **/
+  .jcarousel-list {
+    height: @height;
+    overflow: hidden;
+  }
 
-.jcarousel-pagination {
-    position: absolute;
-    bottom: 0;
-    left: 15px;
-}
+  /** Carousel Pagination **/
 
-.jcarousel-pagination a {
-    text-decoration: none;
-    display: inline-block;
+  .jcarousel-pagination {
+      position: absolute;
+      bottom: 0;
+      left: 15px;
+  }
 
-    font-size: 11px;
-    line-height: 14px;
-    min-width: 14px;
+  .jcarousel-pagination a {
+      text-decoration: none;
+      display: inline-block;
 
-    background: #fff;
-    color: #4E443C;
-    border-radius: 14px;
-    padding: 3px;
-    text-align: center;
+      font-size: 11px;
+      line-height: 14px;
+      min-width: 14px;
 
-    margin-right: 2px;
+      background: #fff;
+      color: #4E443C;
+      border-radius: 14px;
+      padding: 3px;
+      text-align: center;
 
-    opacity: .75;
-}
+      margin-right: 2px;
 
-.jcarousel-pagination a.active {
-    background: #4E443C;
-    color: #fff;
-    opacity: 1;
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.75);
+      opacity: .75;
+  }
+
+  .jcarousel-pagination a.active {
+      background: #4E443C;
+      color: #fff;
+      opacity: 1;
+      text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.75);
+  }
 }
